--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1 {
 }
 
 div {
-    color: rgba(255, 255, 255, 0.8);
-    weight: 100px;
-    Height: 200px;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 80%;
+    Height: 100%;
 }
